No longer cdkTextareaAutosize a textarea, because it caused some weird jumping issues

--- a/src/app/pipelines/pipelines.component.css
+++ b/src/app/pipelines/pipelines.component.css
@@ -32,3 +32,8 @@
 .controls *:not(:first-child) {
     margin-left: 1em;
 }
+
+textarea {
+  width: 100%;
+  min-height: 50vh;
+}
